로그인 / 이메일 인증 구현

--- a/Android/app/src/main/res/layout/activity_email.xml
+++ b/Android/app/src/main/res/layout/activity_email.xml
@@ -161,7 +161,8 @@
                 android:fontFamily="@font/nanum_square_b"
                 android:gravity="center"
                 android:text="다음"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:enabled="false"/>
 
             <Space
                 android:layout_width="match_parent"
