--- a/Android/app/src/main/res/layout/activity_signup.xml
+++ b/Android/app/src/main/res/layout/activity_signup.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/loginAppBarLayout"
+        android:id="@+id/SignUpAppBarLayout"
         android:layout_width="match_parent"
         android:layout_height="60sp"
         tools:ignore="MissingConstraints">
@@ -47,10 +47,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20sp"
+        android:layout_marginBottom="27dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loginAppBarLayout"
-        android:layout_marginTop="20sp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/SignUpAppBarLayout">
 
         <LinearLayout
             android:id="@+id/SignupLayout"
@@ -63,18 +65,34 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints">
 
+            <EditText
+                android:id="@+id/NameText"
+                android:layout_width="350sp"
+                android:layout_height="55sp"
+                android:ems="10"
+                android:fontFamily="@font/nanum_square_r"
+                android:hint="이름"
+                android:inputType="text"
+                android:paddingLeft="10sp"
+                android:textColor="#000000"
+                android:textColorHint="#9E9E9E" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10sp" />
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center" >
+                android:layout_gravity="center">
 
                 <EditText
-                    android:id="@+id/SignupIDText"
+                    android:id="@+id/NickNameText"
                     android:layout_width="350sp"
                     android:layout_height="55sp"
                     android:ems="10"
                     android:fontFamily="@font/nanum_square_r"
-                    android:hint="이름"
+                    android:hint="닉네임"
                     android:inputType="text"
                     android:paddingLeft="10sp"
                     android:textColor="#000000"
@@ -88,7 +106,7 @@
                 android:layout_height="20sp" />
 
             <EditText
-                android:id="@+id/SignupPasswordText"
+                android:id="@+id/SignUpPasswordText"
                 android:layout_width="350sp"
                 android:layout_height="55sp"
                 android:ems="10"
@@ -104,17 +122,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="20sp" />
 
-            <EditText
-                android:id="@+id/SignupPasswordText2"
-                android:layout_width="350sp"
-                android:layout_height="55sp"
-                android:ems="10"
-                android:fontFamily="@font/nanum_square_r"
-                android:hint="비밀번호 확인"
-                android:inputType="text"
-                android:paddingLeft="10sp"
-                android:textColor="#000000"
-                android:textColorHint="#9E9E9E" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <EditText
+                    android:id="@+id/SignupPasswordText2"
+                    android:layout_width="350sp"
+                    android:layout_height="55sp"
+                    android:ems="10"
+                    android:fontFamily="@font/nanum_square_r"
+                    android:hint="비밀번호 확인"
+                    android:inputType="text"
+                    android:paddingLeft="10sp"
+                    android:textColor="#000000"
+                    android:textColorHint="#9E9E9E" />
+
+                <Button
+                    android:id="@+id/PasswordCheckBtn"
+                    android:layout_width="73sp"
+                    android:layout_height="38sp"
+                    android:layout_gravity="end"
+                    android:background="@drawable/stroke_sky_full_angle"
+                    android:fontFamily="@font/nanum_square_b"
+                    android:gravity="center"
+                    android:text="확인"
+                    android:textColor="#9E9E9E"
+                    android:textSize="16sp" />
+
+            </FrameLayout>
 
             <TextView
                 android:id="@+id/SignupPasswordMessage2"
@@ -140,10 +177,10 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center" >
+                android:layout_gravity="center">
 
                 <EditText
-                    android:id="@+id/SignupPostNumberText"
+                    android:id="@+id/SignUpAddressText"
                     android:layout_width="350sp"
                     android:layout_height="55sp"
                     android:ems="10"
@@ -152,9 +189,12 @@
                     android:inputType="text"
                     android:paddingLeft="10sp"
                     android:textColor="#000000"
-                    android:textColorHint="#9E9E9E" />
+                    android:textColorHint="#9E9E9E"
+                    android:editable="false"
+                    android:focusable="false"/>
 
                 <Button
+                    android:id="@+id/SignUpAddressSearchBtn"
                     android:layout_width="73sp"
                     android:layout_height="38sp"
                     android:layout_gravity="end"
@@ -171,13 +211,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="10sp" />
 
-            <EditText
-                android:id="@+id/SignupAddressText"
+            <TextView
+                android:id="@+id/SignupAddressView"
                 android:layout_width="350sp"
                 android:layout_height="55sp"
                 android:ems="10"
                 android:fontFamily="@font/nanum_square_r"
-                android:hint="주소"
                 android:inputType="text"
                 android:paddingLeft="10sp"
                 android:textColor="#000000"
@@ -188,7 +227,7 @@
                 android:layout_height="10sp" />
 
             <EditText
-                android:id="@+id/SignupHomeText"
+                android:id="@+id/SignUpHomeText"
                 android:layout_width="350sp"
                 android:layout_height="55sp"
                 android:ems="10"
@@ -210,16 +249,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30sp"
+            android:layout_marginTop="10sp"
             android:layout_marginEnd="30sp"
-            android:layout_marginTop="20sp"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@id/SignupLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/SignupLayout"
             tools:ignore="MissingConstraints">
 
             <Button
-                android:id="@+id/signupButton"
+                android:id="@+id/SignUpButton"
                 android:layout_width="350sp"
                 android:layout_height="55sp"
                 android:background="@drawable/stroke_sky_full_angle"
