--- a/Android/app/src/main/res/layout/activity_address.xml
+++ b/Android/app/src/main/res/layout/activity_address.xml
@@ -27,7 +27,7 @@
                 android:scaleType="fitCenter"
                 android:backgroundTint="#00FF0000"
                 android:layout_marginStart="10sp"
-                android:src="@drawable/arrow" />
+                android:src="@drawable/baseline_arrow_back_24" />
 
             <TextView
                 android:layout_width="wrap_content"
