--- a/Android/app/src/main/res/layout/activity_form.xml
+++ b/Android/app/src/main/res/layout/activity_form.xml
@@ -27,7 +27,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="폼"
+                    android:text="화함"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -36,7 +36,7 @@
             </androidx.appcompat.widget.Toolbar>
 
             <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabLayout"
+                android:id="@+id/formTabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#CEDDFE"
@@ -59,15 +59,16 @@
             </com.google.android.material.tabs.TabLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
+        0<androidx.recyclerview.widget.RecyclerView
             android:id="@+id/formRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:padding="8dp"
             android:clipToPadding="false"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/formTabLayout"
+            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="2"
             tools:ignore="NotSibling" />
