--- a/Android/app/src/main/res/layout/item_post.xml
+++ b/Android/app/src/main/res/layout/item_post.xml
@@ -2,6 +2,8 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--글 틀 아이템-->
+
     <data>
 
     </data>
