--- a/Android/app/src/main/res/layout/activity_email.xml
+++ b/Android/app/src/main/res/layout/activity_email.xml
@@ -19,18 +19,14 @@
             app:contentInsetStart="0sp"
             app:layout_scrollFlags="scroll|enterAlways">
 
-            <Button
-                android:id="@+id/toolbar_previous"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:fontFamily="@font/nanum_square_b"
-                android:gravity="center"
-                android:text="이전"
-                android:background="#CEDDFE"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+            <ImageButton
+                android:layout_width="45sp"
+                android:layout_height="45sp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:backgroundTint="#00FF0000"
+                android:layout_marginStart="10sp"
+                android:src="@drawable/baseline_arrow_back_24" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -42,7 +38,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:fontFamily="@font/nanum_square_eb"
-                android:text="로그인" />
+                android:text="이메일 인증" />
 
         </androidx.appcompat.widget.Toolbar>
 
