--- a/Android/app/src/main/res/layout/item_form.xml
+++ b/Android/app/src/main/res/layout/item_form.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--폼 틀 아이템-->
     <data>
 
     </data>
