FEAT : 홈 아래 네비게이션바 버튼 이름 변경(mypage로)

--- a/Android/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/Android/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -21,7 +21,7 @@
         android:icon="@drawable/baseline_circle_notifications_24" />
 
     <item
-        android:id="@+id/action_chat"
-        android:title="chat"
+        android:id="@+id/action_mypage"
+        android:title="mypage"
         android:icon="@drawable/baseline_chat_24" />
 </menu>
